force-app/main/default/objects/ssot__ElectronicMedia__dlm/fields/ssot__ContentCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentCategory__c</fullName>
    <label>Content Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContentCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>