force-app/main/default/objects/ssot__ElectronicMedia__dlm/fields/ssot__ImageTitle__c.field-meta.xml
<CustomField>
    <fullName>ssot__ImageTitle__c</fullName>
    <label>Image Title</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ImageTitle</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>