force-app/main/default/objects/ssot__ElectronicMedia__dlm/fields/ssot__ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ssot__ImageURL__c</fullName>
    <label>Image URL</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ImageURL</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>