force-app/main/default/objects/ssot__ElectronicMedia__dlm/fields/ssot__ImageViewType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ImageViewType__c</fullName>
    <label>Image View Type</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ImageViewType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>