force-app/main/default/objects/ssot__ElectronicMedia__dlm/fields/ssot__MediaUrl__c.field-meta.xml
<CustomField>
    <fullName>ssot__MediaUrl__c</fullName>
    <label>Media URL</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MediaUrl</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>